--- a/src/pages/Products/_product.scss
+++ b/src/pages/Products/_product.scss
@@ -56,36 +56,41 @@ $breakpoint-tablet: 576px;
           display: flex;
           align-items: center;
           margin-bottom: 1rem;
-          input {
-            cursor: pointer;
-            appearance: none;
-            width: 20px;
-            height: 20px;
-            border: 1px solid #2dd06e;
-            background: rgba(0, 214, 143, 0.16);
-            border-radius: 3px;
-            position: relative;
-            &:checked {
-              background-color: #2dd06e;
-              border: 2px solid #2dd06e;
+          .link{
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            input {
+              cursor: pointer;
+              appearance: none;
+              width: 20px;
+              height: 20px;
+              border: 1px solid #2dd06e;
+              background: rgba(0, 214, 143, 0.16);
+              border-radius: 3px;
+              position: relative;
+              &:checked {
+                background-color: #2dd06e;
+                border: 2px solid #2dd06e;
+              }
+              &::before{
+                content: '';
+              }
+              &:checked::before {
+                content: '✔';
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                color: #fff;
+                font-size: 12px;
+              }
             }
-            &::before{
-              content: '';
+            label {
+              font-size: 14px;
+              color: #4f4f4f;
+              margin-left: 1rem;
             }
-            &:checked::before {
-              content: '✔';
-              position: absolute;
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-              color: #fff;
-              font-size: 12px;
-            }
-          }
-          label {
-            font-size: 14px;
-            color: #4f4f4f;
-            margin-left: 1rem;
           }
         }
       }
